--- a/donate-ui/src/app/pages/donation-methods/_donation-methods.theme.scss
+++ b/donate-ui/src/app/pages/donation-methods/_donation-methods.theme.scss
@@ -33,6 +33,10 @@
     padding-right: $uxg-spacing-5;
   }
 
+  .pay-btn {
+    width: 100%;
+  }
+
   @include app-determined($theme);
   @include app-round-up($theme);
   @include app-incognito($theme);
