--- a/donate-ui/src/app/pages/home/home.page.html
+++ b/donate-ui/src/app/pages/home/home.page.html
@@ -3,8 +3,8 @@
   <p>Let's change the world today.</p>
 </ion-header>
 
-<ion-content>
-  <div class="home-content">
+<div class="content">
+  <div class="title">
     <h2>Your Updates</h2>
   </div>
   <ng-container *ngFor="let charity of charities">
@@ -24,4 +24,4 @@
       </div>
     </ion-card>
   </ng-container>
-</ion-content>
+</div>
