--- a/donate-ui/src/app/pages/donation-methods/determined/determined.component.html
+++ b/donate-ui/src/app/pages/donation-methods/determined/determined.component.html
@@ -23,16 +23,26 @@
     <h3 class="title">I want to donate</h3>
     <mat-form-field appearance="fill" dense class="determined-fields">
       <mat-icon color="accent" matPrefix>attach_money</mat-icon>
-      <input matInput placeholder="amount" type="number" autocomplete="off" />
+      <input
+        matInput
+        placeholder="amount"
+        type="number"
+        autocomplete="off"
+        [(ngModel)]="amount"
+      />
     </mat-form-field>
 
-    <h3 class="title">to {{ charity.name }} every</h3>
+    <h3 class="title">to {{ charity?.name }} every</h3>
     <mat-form-field appearance="fill" dense class="determined-fields">
-      <mat-select value="month">
+      <mat-select [(ngModel)]="period">
         <mat-option value="week">week</mat-option>
         <mat-option value="month">month</mat-option>
         <mat-option value="year">year</mat-option>
       </mat-select>
     </mat-form-field>
+
+    <button mat-flat-button color="primary" class="pay-btn" (click)="pay()">
+      Pay
+    </button>
   </div>
 </ion-content>
