--- a/donate-ui/src/app/pages/donation-methods/incognito/incognito.component.html
+++ b/donate-ui/src/app/pages/donation-methods/incognito/incognito.component.html
@@ -63,6 +63,6 @@
       </mat-select>
     </mat-form-field>
 
-    <button mat-stroked-button color="primary" class="pay-btn" (click)="pay()">Pay</button>
+    <button mat-flat-button color="primary" class="pay-btn" (click)="pay()">Pay</button>
   </div>
 </ion-content>
