--- a/donate-ui/src/global.scss
+++ b/donate-ui/src/global.scss
@@ -97,7 +97,7 @@ ion-header::after {
 }
 
 $custom-typography: mat-typography-config(
-  $font-family: '"Typo Round Regular Demo", sans-serif;',
+  $font-family: '"Comfortaa", sans-serif;',
 );
 @include mat-core($custom-typography);
 
