--- a/donate-ui/src/theme/_base.scss
+++ b/donate-ui/src/theme/_base.scss
@@ -3,13 +3,9 @@ a {
 }
 
 * {
-  font-family: "Typo Round", sans-serif;
-  font-family: "Typo Round Regular Demo", sans-serif;
-  // font-family: "Typo Round Thin Demo", sans-serif;
-  // font-family: "Typo Round Light Demo", sans-serif;
-  // font-family: "Typo Round Bold Demo", sans-serif;
+  font-family: 'Comfortaa', sans-serif;
 }
 
 ion-label {
-  font-family: "Typo Round Regular Demo", sans-serif !important;
+  font-family: "Comfortaa", sans-serif !important;
 }
