--- a/donate-ui/src/app/pages/add-donation/topic-card/topic-card.component.html
+++ b/donate-ui/src/app/pages/add-donation/topic-card/topic-card.component.html
@@ -13,7 +13,7 @@
           />
         </div>
         <div class="topic-content-container">
-          <p class="title">{{ charity.name }}</p>
+          <p class="bold title">{{ charity.name }}</p>
           <p class="description">
             {{ charity.description }}
           </p>
