--- a/donate-ui/src/app/pages/charity-details/charity-details.page.html
+++ b/donate-ui/src/app/pages/charity-details/charity-details.page.html
@@ -11,7 +11,7 @@
 
 <div class="content">
   <div class="charity-details">
-    <h2 class="title">{{charity.name}}</h2>
+    <h2>{{charity.name}}</h2>
     <p class="subtitle">{{charity.description}}</p>
 
     <button
