--- a/donate-ui/src/app/pages/donation-methods/_donation-methods.theme.scss
+++ b/donate-ui/src/app/pages/donation-methods/_donation-methods.theme.scss
@@ -19,13 +19,13 @@
     }
 
     .method-description {
-      font-family: "Typo Round Regular Demo", sans-serif !important;
+      font-family: "Comfortaa", sans-serif !important;
+      font-size: 12px;
     }
   }
 
   .donation-method {
     cursor: pointer;
-    // background: #92e7bd;
     background: url("../../../assets/svg/selectarrow.svg");
     background-repeat: no-repeat;
     background-size: contain;
