--- a/donate-ui/src/app/pages/login/login.page.html
+++ b/donate-ui/src/app/pages/login/login.page.html
@@ -1,16 +1,14 @@
 <ion-content>
   <div
-    class="register-page-content"
+    class="login-page-content"
     fxLayout="column"
     fxLayoutAlign="center center"
   >
-    <ion-avatar>
-      <img
-        src="https://www.gravatar.com/avatar/00000000000000000000000000000000?d=mp&f=y"
-      />
+    <ion-avatar class="login-avatar">
+      <img src="../../../assets/png/logolarge.png" class="logo" />
+      <h1 class="app-name">iGive</h1>
     </ion-avatar>
-    <h3>iGive</h3>
-    <h1>Login</h1>
+    <h3>login</h3>
     <mat-form-field appearance="fill" dense class="login-field">
       <mat-icon color="accent" matPrefix>mail_outline</mat-icon>
       <input
