--- a/donate-ui/src/app/pages/register/_register.theme.scss
+++ b/donate-ui/src/app/pages/register/_register.theme.scss
@@ -7,8 +7,20 @@
     background-size: cover;
     height: 100%;
 
-    ion-avatar {
-      margin-top: 5rem;
+    .register-avatar {
+      height: 124px;
+      width: 124px;
+      margin-top: -5rem !important;
+      margin-bottom: 6rem !important;
+      text-align: center;
+
+      .logo {
+        margin-bottom: $uxg-spacing-3;
+      }
+
+      .app-name {
+        font-size: 32px;
+      }
     }
 
     .register-field {
