--- a/donate-ui/src/app/pages/register/register.page.html
+++ b/donate-ui/src/app/pages/register/register.page.html
@@ -4,13 +4,11 @@
     fxLayout="column"
     fxLayoutAlign="center center"
   >
-    <ion-avatar>
-      <img
-        src="https://www.gravatar.com/avatar/00000000000000000000000000000000?d=mp&f=y"
-      />
+    <ion-avatar class="register-avatar">
+      <img src="../../../assets/png/logolarge.png" class="logo" />
+      <h1 class="app-name">iGive</h1>
     </ion-avatar>
-    <h1>iGive</h1>
-    <h2>Create an account</h2>
+    <h3>create an account</h3>
     <mat-form-field appearance="fill" dense class="register-field">
       <mat-icon color="accent" matPrefix>person_outline</mat-icon>
       <input
