--- a/donate-ui/src/app/pages/browse-causes/topic-list/topic-list.component.html
+++ b/donate-ui/src/app/pages/browse-causes/topic-list/topic-list.component.html
@@ -10,41 +10,35 @@
 </ion-header>
 
 <ion-content>
-  <div class="topic-list-container">
+  <div class="content topic-list-container">
     <h1 class="title">{{ topic }}</h1>
-    <div class="add-donation-container">
-      <mat-form-field appearance="fill" class="donation-search">
-        <mat-icon color="accent" matPrefix>search</mat-icon>
-        <input matInput placeholder="search" autocomplete="off" />
-      </mat-form-field>
-
-      <ng-container *ngFor="let charity of charities">
-        <ion-card class="charity-card" (click)="goToCharityDetails(charity)">
-          <div class="image-container">
-            <img
-              [src]="
-                '../../../../assets/img/' +
-                charity.topic +
-                '/' +
-                charity.name +
-                '.jpg'
-              "
-            />
-          </div>
-          <ion-card-content>
-            <h3 class="title">{{ charity.name }}</h3>
-            <p class="description">
-              {{ charity.description }}
-            </p>
-            <p class="read-more">
-              <a [href]="charity.websiteUrl">Read more</a>
-            </p>
-          </ion-card-content>
-        </ion-card>
-      </ng-container>
-      <!-- <ng-container *ngIf="!charities.length">
-      There are no causes associated with this topic.
-    </ng-container> -->
-    </div>
+    <mat-form-field appearance="fill" class="donation-search">
+      <mat-icon color="accent" matPrefix>search</mat-icon>
+      <input matInput placeholder="search" autocomplete="off" />
+    </mat-form-field>
+    <ng-container *ngFor="let charity of charities">
+      <ion-card class="charity-card" (click)="goToCharityDetails(charity)">
+        <div class="image-container">
+          <img
+            [src]="
+              '../../../../assets/img/' +
+              charity.topic +
+              '/' +
+              charity.name +
+              '.jpg'
+            "
+          />
+        </div>
+        <div class="content-container">
+          <h3 class="title">{{ charity.name }}</h3>
+          <p class="description">
+            {{ charity.description }}
+          </p>
+          <p class="read-more">
+            <a [href]="charity.websiteUrl">Read more</a>
+          </p>
+        </div>
+      </ion-card>
+    </ng-container>
   </div>
 </ion-content>
