update back button icon

--- a/donate-ui/src/app/pages/charity-details/charity-details.page.html
+++ b/donate-ui/src/app/pages/charity-details/charity-details.page.html
@@ -5,6 +5,7 @@
       defaultHref=""
       (click)="goBack()"
       text=""
+      icon="arrow-back-circle-outline"
     ></ion-back-button>
   </ion-buttons>
 </ion-header>
