--- a/donate-ui/src/app/pages/donation-methods/donation-methods.page.html
+++ b/donate-ui/src/app/pages/donation-methods/donation-methods.page.html
@@ -4,6 +4,7 @@
       defaultHref=""
       class="back-btn"
       text=""
+      icon="arrow-back-circle-outline"
       (click)="goBack()"
     ></ion-back-button>
   </ion-buttons>
