--- a/donate-ui/src/app/pages/payment/bank-account/bank-account.component.html
+++ b/donate-ui/src/app/pages/payment/bank-account/bank-account.component.html
@@ -4,7 +4,7 @@
       class="back-btn"
       defaultHref="user-preferences"
       text=""
-      icon="chevron-back"
+      icon="arrow-back-circle-outline"
     ></ion-back-button>
   </ion-buttons>
 </ion-header>
