--- a/donate-ui/src/app/pages/payment/paypal-account/paypal-account.component.html
+++ b/donate-ui/src/app/pages/payment/paypal-account/paypal-account.component.html
@@ -3,7 +3,7 @@
     <ion-back-button
       class="back-btn"
       text=""
-      icon="chevron-back"
+      icon="arrow-back-circle-outline"
     ></ion-back-button>
   </ion-buttons>
 </ion-header>
