--- a/donate-ui/src/app/pages/donation-methods/determined/determined.component.html
+++ b/donate-ui/src/app/pages/donation-methods/determined/determined.component.html
@@ -4,6 +4,7 @@
       defaultHref=""
       class="back-btn"
       text=""
+      icon="arrow-back-circle-outline"
       (click)="back()"
     ></ion-back-button>
   </ion-buttons>
