--- a/donate-ui/src/app/pages/payment/bank-account/bank-account.component.html
+++ b/donate-ui/src/app/pages/payment/bank-account/bank-account.component.html
@@ -10,8 +10,11 @@
 </ion-header>
 
 <ion-content>
+  <ion-item  lines="none">
+    <h2 class="title" *ngIf="mode ==='EDIT'">edit bank details</h2>
+    <h2 class="title" *ngIf="mode ==='ADD'">set up bank details</h2>
+  </ion-item>
   <div class="bank-account" fxLayout="column" fxLayoutAlign="center center">
-    <h1 class="payment-title">bank information</h1>
     <mat-form-field appearance="fill" dense class="bank-field">
       <input
         matInput
