--- a/donate-ui/src/app/pages/user-profile/user-profile.page.html
+++ b/donate-ui/src/app/pages/user-profile/user-profile.page.html
@@ -1,10 +1,10 @@
-<ion-header class="tall-header user-profile-header">
-  <div fxLayout="column" fxLayoutAlign="start center">
+<ion-header class="tall-header large">
+  <div class="user-profile-header" fxLayout="column" fxLayoutAlign="center center">
     <ion-avatar>
       <img [src]="avatar" />
     </ion-avatar>
-    <h3 class="mt-3 mb-1">{{ fullName }}</h3>
-    <a [routerLink]="['/profile/info']"  [state]="{ user: user }" class="mt-0">edit profile</a>
+    <h3 class="mt-2 mb-0">{{ displayName }}</h3>
+    <a [routerLink]="['info']"  class="mt-0">edit profile</a>
   </div>
 </ion-header>
 <ion-content>
@@ -34,4 +34,5 @@
       </ion-item>
     </ion-list>
   </div>
+  <div class="copyright">Made with ❤️ by Tyro (©) 2020</div>
 </ion-content>
