--- a/donate-ui/src/app/pages/tabs/tabs.page.html
+++ b/donate-ui/src/app/pages/tabs/tabs.page.html
@@ -11,7 +11,7 @@
 
       <ion-tab-button> </ion-tab-button>
 
-      <ion-tab-button tab="payment">
+      <ion-tab-button tab="transactions">
         <ion-icon name="cash-outline"></ion-icon>
       </ion-tab-button>
 
