--- a/donate-ui/src/app/pages/charity-details/charity-details.page.html
+++ b/donate-ui/src/app/pages/charity-details/charity-details.page.html
@@ -16,6 +16,7 @@
     <p class="subtitle">{{charity.description}}</p>
 
     <button
+      *ngIf="!hasDonationMethod"
       mat-flat-button
       color="primary"
       class="support-btn"
