--- a/donate-ui/src/app/pages/user-profile/profile/profile.component.html
+++ b/donate-ui/src/app/pages/user-profile/profile/profile.component.html
@@ -13,7 +13,7 @@
     <h2 class="title">edit profile</h2>
   </ion-item>
   <div fxLayout="column" fxLayoutAlign="start center" class="mb-4">
-    <ion-avatar>
+    <ion-avatar class="profile-avatar">
       <img [src]="user.avatar" />
       <button class="edit-avatar-button">edit</button>
     </ion-avatar>
