--- a/donate-ui/src/app/pages/user-profile/user-profile.page.html
+++ b/donate-ui/src/app/pages/user-profile/user-profile.page.html
@@ -1,6 +1,6 @@
 <ion-header class="tall-header large">
   <div class="user-profile-header" fxLayout="column" fxLayoutAlign="center center">
-    <ion-avatar>
+    <ion-avatar class="user-profile-avatar">
       <img [src]="avatar" />
     </ion-avatar>
     <h3 class="mt-2 mb-0">{{ displayName }}</h3>
