--- a/donate-ui/src/app/pages/user-profile/profile/profile.component.scss
+++ b/donate-ui/src/app/pages/user-profile/profile/profile.component.scss
@@ -1,28 +1,28 @@
 @mixin app-user-profile($theme) {
-    a {
-        text-decoration: none;
+  a {
+    text-decoration: none;
+  }
+  .profile-avatar {
+    width: 100px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    border-radius: 50%;
+    overflow: hidden;
+    @include mat-elevation(12, white, 1);
+    img {
+      position: absolute;
     }
-    ion-avatar {
-        width: 100px;
-        height: 100px;
-        display: flex;
-        justify-content: center;
-        position: relative;
-        border-radius: 50%;
-        overflow: hidden;
-        @include mat-elevation(12, white, 1);
-        img {
-            position: absolute;
-        }
-        .edit-avatar-button {
-            position: absolute;
-            bottom: 0;
-            background: rgba(black, 0.5);
-            color: white;
-            width: 100%;
-            padding: 5px;
-            font-size: smaller;
-            font-weight: lighter;
-        }
+    .edit-avatar-button {
+      position: absolute;
+      bottom: 0;
+      background: rgba(black, 0.5);
+      color: white;
+      width: 100%;
+      padding: 5px;
+      font-size: smaller;
+      font-weight: lighter;
     }
+  }
 }
