--- a/donate-ui/src/app/pages/user-profile/user-profile.page.scss
+++ b/donate-ui/src/app/pages/user-profile/user-profile.page.scss
@@ -1,22 +1,22 @@
 @mixin app-user-profile-page($theme) {
-    .user-profile-header {
-        height: 100%;
-        ion-avatar {
-            width: 100px;
-            height: 100px;
-            @include mat-elevation(12, white, 1);
-        }
-        a {
-            text-decoration: none;
-            color: black;
-        }
+  .user-profile-header {
+    height: 100%;
+    .user-profile-avatar {
+      width: 100px;
+      height: 100px;
+      @include mat-elevation(12, white, 1);
     }
-    .copyright {
-        position: absolute;
-        bottom: 16px;
-        font-size: smaller;
-        display: flex;
-        width: 100%;
-        justify-content: center;
+    a {
+      text-decoration: none;
+      color: black;
     }
+  }
+  .copyright {
+    position: absolute;
+    bottom: 16px;
+    font-size: smaller;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+  }
 }
