--- a/donate-ui/src/app/pages/home/home.page.html
+++ b/donate-ui/src/app/pages/home/home.page.html
@@ -11,12 +11,12 @@
     <ion-card class="charity-card">
       <div class="image-container">
         <img
-          src="https://www.tespack.com/wp-content/uploads/2018/04/save-child.jpg"
+          [src]='"../../../assets/img/" + charity.topic + "/" + charity.name + ".jpg"'
           class="charity-image"
         />
       </div>
       <div class="content-container">
-        <p>$10,000 goal reached!</p>
+        <!-- <p>$10,000 goal reached!</p> -->
         <p>{{charity.description}}</p>
         <p class="charity-impact">
           <a [href]="charity.websiteUrl">Read more</a>
