--- a/donate-ui/src/app/pages/user-profile/payment-info/payment-info.component.html
+++ b/donate-ui/src/app/pages/user-profile/payment-info/payment-info.component.html
@@ -20,7 +20,7 @@
       (click)="goToBankDetails()"
     >
       <mat-icon>account_balance</mat-icon>
-      <div class="title">{{hasBank ? 'edit' : 'set up'}} bank details</div>
+      <div class="title">{{ hasBank ? "edit" : "set up" }} bank details</div>
     </div>
   </ion-item>
   <ion-item lines="none" class="mb-3">
@@ -31,7 +31,7 @@
       (click)="goToPaypalDetails()"
     >
       <mat-icon svgIcon="svg-paypal"></mat-icon>
-      <div class="title">{{hasPaypal ? 'edit' : 'set up'}} paypal</div>
+      <div class="title">{{ hasPaypal ? "edit" : "set up" }} paypal</div>
     </div>
   </ion-item>
   <ion-item lines="none" class="mb-3">
@@ -41,7 +41,7 @@
       class="payment-info-container pl-4"
     >
       <mat-icon>credit_card</mat-icon>
-      <div class="title">{{hasCard ? 'edit' : 'set up'}} card</div>
+      <div class="title">{{ hasCard ? "edit" : "set up" }} card</div>
     </div>
   </ion-item>
 </ion-content>
