--- a/donate-ui/src/app/pages/donation-methods/donation-notification/donation-notification.component.html
+++ b/donate-ui/src/app/pages/donation-methods/donation-notification/donation-notification.component.html
@@ -4,5 +4,9 @@
   <div class="round-up-container">
     <h2 class="title">Awesome!</h2>
     <p>Your donation to {{ charity.name }} has been successfully set up!</p>
+
+    <div class="done-container">
+      <img [src]="'../../../../assets/png/done.png'" />
+    </div>
   </div>
 </ion-content>
