--- a/donate-ui/src/app/pages/user-preferences/welcome/welcome.component.html
+++ b/donate-ui/src/app/pages/user-preferences/welcome/welcome.component.html
@@ -6,35 +6,22 @@
     <p class="subtitle">
       The app for donating when you don't want to think about it
     </p>
-
     <div fxLayout="row" fxLayoutAlign="start center" class="description">
-      <img
-        class="checkmark"
-        alt="checkmark"
-        src="./../../../../assets/svg/checkmark.svg"
-      />
+      <i class="ri-checkbox-circle-line"></i>
       <p class="welcome-description">
         donate every time you make a purchase by rounding up to the nearest
         dollar and donating the difference
       </p>
     </div>
     <div fxLayout="row" fxLayoutAlign="start center" class="description">
-      <img
-        class="checkmark"
-        alt="checkmark"
-        src="./../../../../assets/svg/checkmark.svg"
-      />
+      <i class="ri-checkbox-circle-line"></i>
       <p class="welcome-description">
         tell us what causes you care about and we’ll show you the best way to
         support it
       </p>
     </div>
     <div fxLayout="row" fxLayoutAlign="start center" class="description">
-      <img
-        class="checkmark"
-        alt="checkmark"
-        src="./../../../../assets/svg/checkmark.svg"
-      />
+      <i class="ri-checkbox-circle-line"></i>
       <p class="welcome-description">
         see the difference! get updates directly from the cause you’re supporing
         about the difference being made
