--- a/donate-ui/src/app/pages/browse-causes/topic-list/topic-list.component.html
+++ b/donate-ui/src/app/pages/browse-causes/topic-list/topic-list.component.html
@@ -5,6 +5,7 @@
       defaultHref=""
       (click)="goBack()"
       text=""
+      icon="arrow-back-circle-outline"
     ></ion-back-button>
   </ion-buttons>
 </ion-header>
