fix filter search

--- a/donate-ui/src/app/pages/add-donation/add-donation.page.html
+++ b/donate-ui/src/app/pages/add-donation/add-donation.page.html
@@ -11,6 +11,7 @@
         matInput
         placeholder="search"
         autocomplete="off"
+        [(ngModel)]="filters.searchByName"
         (input)="term$.next($event.target.value)"
       />
     </mat-form-field>
